src/encoded/static/scss/encoded/modules/_item-pages.scss
/* ... */
/**********************************************************
					AdjustableDividerRow
**********************************************************/

.adjustable-divider-row {
	margin-left: 0;
	margin-right: 0;
	@include media-breakpoint-up(lg) {
		> .left-panel {
			padding-right: 10px;
		}
		> .right-panel {
			padding-left: 10px;
		}
	}
}

/**********************************************************
				Experiments Set View
**********************************************************/

.exp-table-section {

	h3 {

		span.exp-number {
			padding-top: 5px;
		}

	}

	.expset-higlass-panel {
		@include media-breakpoint-up(lg){
			margin-bottom: -20px;
		}
	}

	/*
	table tbody tr:first-child td {

		&:nth-child(1),
		&:nth-child(2) {
			border-bottom-color: #c0c0c0;
		}
	}
	*/
}


.exp-table-container {
	overflow-x: auto;
	display: block;
}

.draggable-border {
	height: 100%;
	padding-left: 5px;
	padding-right: 5px;
	position: absolute;
	top: 0px;
	cursor: ew-resize;
	z-index: 5;
	> .inner {
		height: 100%;
		width: 0;
		border-left: 1px solid #eee;
		> .drag-handle {
			position: absolute;
			left: 3px;
			width: 5px;
			background-color: transparent;
			border-left: 1px solid #ddd;
			border-right: 1px solid #ddd;
		}
	}
	&:hover,
	&.react-draggable-dragging {
		> .inner {
			border-color: #888;
			box-shadow: 0 0 1px #999;
			> .drag-handle {
				border-color: #999;
			}
		}
	}
}


/**********************************************************
			Processing Summary Table (CaseView)
**********************************************************/

.item-page-container {

	#cohort-overview-ped-link {
		margin-left: 0;
		@include media-breakpoint-up(lg) {
			margin-left: 10px;
		}

		img.card-img-top {
			display: none;
			height: calc(100% - 37px);
			@include media-breakpoint-up(lg) {
				display: block;
			}
		}
	}

	#cohort-stats,
	#cohort-overview-ped-link {
		width: 100%;
		@include media-breakpoint-up(lg) {
			width: 50%;
		}
	}

	label.badge-list-label {
		padding-right: 3px;
		margin-bottom: 0;
	}
	.badge-list {
		list-style: none;
		padding-left: 0;
		margin-bottom: 0;
		display: inline;

		> li {
			display: inline-block;
		}
	}

	div.summary-table-container {

		padding-top: 10px;
		padding-bottom: 10px;

		> h4:first-child {
			margin-bottom: 0;
			font-weight: 400;
			margin-top: 10px;
		}

		&:not(.family-index-0){
			border-top: 1px solid #ddd;
			padding-top: 10px;
		}

		div.processing-summary {
			margin-bottom: 10px;
		}

		.processing-summary-table-container {

			overflow-x: auto;
			-webkit-overflow-scrolling: touch;

			table.processing-summary-table {

				margin-top: 10px;
				min-width: 640px;
				width: 100%;

				tbody {
					tr {
						td {
							padding: 4px 8px;
							/*
							&[data-for-column="individual"],
							&[data-for-column="sample"] {
								font-family: $font-family-monospace;
							}
							*/
						}
						&.is-even {
							background-color: rgba(0, 0, 0, 0.03);
						}
						&.is-proband {
							> td {
								background-color: #ebf6ff;
								&:first-child {
									font-weight: 600;
								}
							}
						}
						&[data-sample-index="0"] {
							> td {
								border-top: 1px solid #f8f8f8;
							}
						}
						&:not([data-sample-index="0"]) {
							> td[data-for-column="individual"] {
								visibility: hidden;
							}
						}
						.qcs-container {
							&.text-ellipses-container {
								max-width: 140px;
							}
							> span {
								display: inline-block;
								border-right: solid 1px #bbb;
								padding: 0 5px;
								&:last-child {
									border: none;
								}
							}
							a.qc-status-in-review {
								font-style: italic;
								}
						}
					}
				}

			}

		}

	}

}
/* ... */

